fixed issue with canvas overlapping nav

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -84,7 +84,7 @@ main {
 canvas{
   position: absolute;
   width: 100%; height: 100%;
-  top: 0; right: 0; bottom: 0; left: 0;
+  
 }
 
 /******
